Fix width issues on iphone5/SE and Galaxy Fold

--- a/styles/style.css
+++ b/styles/style.css
@@ -189,4 +189,10 @@ footer ul li{
     align-items: center;
   }
 }
+
+@media (max-width: 320px){
+ #instagram-logo img{
+   width:100%;
+ }
+}
   
